# discord-mcp

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
src/: main.py
src/config/: __init__.py  config.py
src/discord/: discord_client.py  event_handler.py  slash_command_handler.py
src/llm/: gemini.py  llm.py  mcp_server.py  openai.py
src/repository/: chat_session.py  mem_chat_session_storage.py  redis_chat_session_storage.py
